2010-01-20  Ben Murdoch  <benm@google.com>

        Reviewed by Simon Hausmann.

        The touchcancel event is not supported.
        https://bugs.webkit.org/show_bug.cgi?id=33598

        Test for the oncancel event.

        * fast/events/script-tests/send-oncancel-event.js: Added.
        (touchcancelHandler):
        * fast/events/touch/send-oncancel-event-expected.txt: Added.
        * fast/events/touch/send-oncancel-event.html: Added.
        * platform/qt/Skipped: Add send-oncancel-event to the Qt Skipped list as there is not support for that type of event on Qt yet.

2010-01-20  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] fast/frames/set-unloaded-frame-location.html timed out on Qt Linux Release Build Bot
        https://bugs.webkit.org/show_bug.cgi?id=33303

        It caused by the previously test, so skipped it until fix.

        * platform/qt/Skipped: fast/frames/sandboxed-iframe-navigation-windowopen.html skipped.

2010-01-20  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Darin Adler.

        Bug 28420 - Re-enable fast/ruby layout tests after the issue with mixedContent was fixed.
        (https://bugs.webkit.org/show_bug.cgi?id=28420, patch 5a)

        cf. https://bugs.webkit.org/show_bug.cgi?id=31200

        * platform/mac/Skipped:

2010-01-20  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Dan Bernstein.

        Bug 33266 - WebCore::InlineFlowBox::determineSpacingForFlowBoxes ReadAV@NULL (43c64e8abbda6766e5f5edbd254c2d57)
        (https://bugs.webkit.org/show_bug.cgi?id=33266)
        
        Layout tests for ruby with malformed HTML.
        Split up in individual tests, as well ass added a single combined test
        (whose resulting render tree is probably completely different from what
        you'd expect), since that combined test showed additional issues not
        covered by the individual tests.

        * fast/ruby/ruby-illegal-1-expected.txt: Added.