@@ -5569,7 +5569,6 @@ fast/css/opacity-float.html
 # Media tests that keep failing on the bot
 media/video-currentTime-set.html
 media/video-play-pause-events.html
-media/video-play-pause-exception.html
 
 # New events failing; see https://bugs.webkit.org/show_bug.cgi?id=28823
 fast/events/pageshow-pagehide-on-back-cached.html
